Bug 365083 edit components cc list text needs wordsmithing r=lpsolit a=justdave

--- a/webtools/bugzilla/template/en/default/admin/components/edit.html.tmpl
+++ b/webtools/bugzilla/template/en/default/admin/components/edit.html.tmpl
@@ -96,7 +96,7 @@
         %]
         <br>
         [% IF !Param("usemenuforusers") %]
-          <em>Enter user names for the CC in a comma-separated list.</em>
+          <em>Enter user names for the CC list as a comma-separated list.</em>
         [% END %]
       </td>
     </tr>
