Bug 365374: The newchangedmail template calls field-descs when it only needs variables.none.tmpl (perf problem) Patch By Olav Vitters <olav@bkor.dhs.org> r=mkanat, a=justdave

--- a/webtools/bugzilla/template/en/default/email/newchangedmail.txt.tmpl
+++ b/webtools/bugzilla/template/en/default/email/newchangedmail.txt.tmpl
@@ -19,7 +19,7 @@
   # Contributor(s): André Batosti <batosti@async.com.br>
   #%]
 
-[% PROCESS "global/field-descs.none.tmpl" %]
+[% PROCESS "global/variables.none.tmpl" %]
 From: [% Param('mailfrom') %]
 To: [% to %]
 Subject: [[% terms.Bug %] [%+ bugid %]] [% neworchanged %][%+ summary %]
