Bug 365293: [mod_perl] click OR, AND or ADD... button in bool charts initiates search Patch By Max Kanat-Alexander <mkanat@bugzilla.org> r=justdave, a=justdave

--- a/webtools/bugzilla/template/en/default/search/boolean-charts.html.tmpl
+++ b/webtools/bugzilla/template/en/default/search/boolean-charts.html.tmpl
@@ -52,7 +52,7 @@
 
 [%# Whoever wrote the original version of boolean charts had a seriously twisted mind %]
 
-[% jsmagic = "onclick=\"document.forms[0].action='query.cgi#chart'; document.forms[0].method='POST'; return 1;\"" %]
+[% jsmagic = "onclick=\"this.form.action='query.cgi#chart'; this.form.method='POST'; return 1;\"" %]
 
 [% FOREACH chart = default.charts %]
   [% chartnum = loop.count - 1 %]
