Bug 365469: restore create-guided's ability to auto-insert the User-Agent in the build ID field. r=gerv, a=justdave

--- a/webtools/bugzilla/template/en/default/bug/create/create-guided.html.tmpl
+++ b/webtools/bugzilla/template/en/default/bug/create/create-guided.html.tmpl
@@ -269,7 +269,7 @@ function PutDescription() {
     </td>
   </tr>
 
-  [% IF product.match("Firefox|Camino|Mozilla Application Suite") %]
+  [% IF product.name.match("Firefox|Camino|Mozilla Application Suite") %]
     [% matches = cgi.user_agent('Gecko/(\d+)') %]
     [% buildid = cgi.user_agent() IF matches %]
   [% END %]
