--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -2425,6 +2425,10 @@ notification[value="translation"] {
   -moz-image-region: rect(0px, 32px, 16px, 16px);
 }
 
+.translation-menupopup {
+  -moz-appearance: none;
+}
+
 /* Bookmarks roots menu-items */
 #subscribeToPageMenuitem:not([disabled]),
 #subscribeToPageMenupopup,
