--- a/browser/themes/shared/devtools/timeline.inc.css
+++ b/browser/themes/shared/devtools/timeline.inc.css
@@ -48,22 +48,23 @@
   display: none;
 }
 
-.theme-dark #timeline-pane {
-  border-top: 1px solid #000;
+.theme-dark #timeline-overview {
+  border-bottom: 1px solid #000;
 }
 
-.theme-light #timeline-pane {
-  border-top: 1px solid #aaa;
+.theme-light #timeline-overview {
+  border-bottom: 1px solid #aaa;
 }
 
-.waterfall-list-contents {
+.timeline-list-contents {
   /* Hack: force hardware acceleration */
   transform: translateZ(1px);
   overflow-x: hidden;
   overflow-y: auto;
 }
 
-.waterfall-background-ticks {
+.timeline-header-ticks,
+.timeline-marker-waterfall {
   /* Background created on a <canvas> in js. */
   /* @see browser/devtools/timeline/widgets/waterfall.js */
   background-image: -moz-element(#waterfall-background);
@@ -71,69 +72,76 @@
   background-position: -1px center;
 }
 
-.waterfall-marker-container[is-spacer] {
-  pointer-events: none;
-}
-
-.theme-dark .waterfall-marker-container:not([is-spacer]):nth-child(2n) {
-  background-color: rgba(255,255,255,0.03);
-}
-
-.theme-light .waterfall-marker-container:not([is-spacer]):nth-child(2n) {
-  background-color: rgba(128,128,128,0.03);
-}
-
-.theme-dark .waterfall-marker-container:hover {
-  background-color: rgba(255,255,255,0.1) !important;
-}
-
-.theme-light .waterfall-marker-container:hover {
-  background-color: rgba(128,128,128,0.1) !important;
-}
-
-.waterfall-marker-item {
+.timeline-marker-waterfall {
   overflow: hidden;
 }
 
-.waterfall-sidebar {
+.timeline-marker-container[is-spacer] {
+  pointer-events: none;
+}
+
+.theme-dark .timeline-marker-container:not([is-spacer]):nth-child(2n) {
+  background-color: rgba(255,255,255,0.03);
+}
+
+.theme-light .timeline-marker-container:not([is-spacer]):nth-child(2n) {
+  background-color: rgba(128,128,128,0.03);
+}
+
+.theme-dark .timeline-marker-container:hover {
+  background-color: rgba(255,255,255,0.1) !important;
+}
+
+.theme-light .timeline-marker-container:hover {
+  background-color: rgba(128,128,128,0.1) !important;
+}
+
+.timeline-header-sidebar,
+.timeline-marker-sidebar {
   -moz-border-end: 1px solid;
 }
 
-.theme-dark .waterfall-sidebar {
+.theme-dark .timeline-header-sidebar,
+.theme-dark .timeline-marker-sidebar {
   -moz-border-end-color: #000;
 }
 
-.theme-light .waterfall-sidebar {
+.theme-light .timeline-header-sidebar,
+.theme-light .timeline-marker-sidebar {
   -moz-border-end-color: #aaa;
 }
 
-.waterfall-marker-container:hover > .waterfall-sidebar {
+.timeline-header-sidebar {
+  padding: 5px;
+}
+
+.timeline-marker-sidebar {
+  padding: 2px;
+}
+
+.timeline-marker-container:hover > .timeline-marker-sidebar {
   background-color: transparent;
 }
 
-.waterfall-header-name {
-  padding: 4px;
-}
-
-.waterfall-header-tick {
+.timeline-header-tick {
   width: 100px;
   font-size: 9px;
   transform-origin: left center;
 }
 
-.theme-dark .waterfall-header-tick {
+.theme-dark .timeline-header-tick {
   color: #a9bacb;
 }
 
-.theme-light .waterfall-header-tick {
+.theme-light .timeline-header-tick {
   color: #292e33;
 }
 
-.waterfall-header-tick:not(:first-child) {
+.timeline-header-tick:not(:first-child) {
   -moz-margin-start: -100px !important; /* Don't affect layout. */
 }
 
-.waterfall-marker-bullet {
+.timeline-marker-bullet {
   width: 8px;
   height: 8px;
   -moz-margin-start: 8px;
@@ -142,13 +150,9 @@
   border-radius: 1px;
 }
 
-.waterfall-marker-name {
-  font-size: 95%;
-  padding-bottom: 1px !important;
-}
-
-.waterfall-marker-bar {
-  height: 9px;
+.timeline-marker-bar {
+  margin-top: 4px;
+  margin-bottom: 4px;
   border: 1px solid;
   border-radius: 1px;
   transform-origin: left center;
