Bug 1062127 - Style the in-content preference dialogs. r=dao

--- a/browser/themes/linux/preferences/in-content/preferences.css
+++ b/browser/themes/linux/preferences/in-content/preferences.css
@@ -2,7 +2,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this file,
    - You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-%include ../../../shared/incontentprefs/preferences.css
+%include ../../../shared/incontentprefs/preferences.inc.css
 
 spinbuttons {
   -moz-appearance: none;
@@ -39,11 +39,23 @@ filefield + button {
   -moz-margin-start: -4px;
 }
 
-#dialogTitle {
-  -moz-margin-start: 12px !important;
+/**
+ * Dialog
+ */
+
+#dialogBox {
+  padding: 20px;
 }
 
-.actionButtons {
-  margin-right: 8px !important;
-  margin-left: 8px !important;
+#dialogTitle {
+  font-size: 1em;
+}
+
+.titlebar {
+  margin-bottom: 12px;
+}
+
+.close-icon {
+  margin-top: -32px;
+  -moz-margin-end: -15px;
 }
