--- a/browser/themes/shared/incontentprefs/preferences.inc.css
+++ b/browser/themes/shared/incontentprefs/preferences.inc.css
@@ -5,17 +5,7 @@
 %endif
 @namespace html "http://www.w3.org/1999/xhtml";
 
-#dialogBox,
-dialog,
-window,
-prefwindow,
-.windowDialog {
-  -moz-appearance: none;
-  background-color: #f1f1f1;
-  color: #424E5A;
-}
-
-prefpane {
+#mainPrefPane {
   max-width: 800px;
   padding: 0;
   font: message-box;
@@ -308,7 +298,7 @@ description > html|a {
 }
 
 /**
- * Sub-dialog
+ * Dialog
  */
 
 #dialogOverlay {
@@ -317,18 +307,25 @@ description > html|a {
 }
 
 #dialogBox {
-  border: 1px solid #666;
+  background-color: #fbfbfb;
+  color: #424e5a;
+  font-size: 14px;
+  border: 1px solid rgba(0,0,0,0.35);
+  border-radius: 2.5px;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
   display: -moz-box;
   margin: 0;
-  padding-right: 6px;
-  padding-left: 6px;
 }
 
 #dialogBox[resizable="true"] {
   resize: both;
   overflow: hidden;
-  min-height: 30em;
+  min-height: 20em;
   min-width: 66ch;
+}
+
+.titlebar {
+  -moz-margin-start: 4px;
 }
 
 .close-icon {
@@ -348,19 +345,10 @@ description > html|a {
 #dialogFrame {
   -moz-box-flex: 1;
   /* Default dialog dimensions */
-  height: 30em;
+  height: 20em;
   width: 66ch;
 }
 
-tree:not(#rejectsTree) {
-  min-height: 15em;
-}
-
-:-moz-any(dialog, window, prefwindow) groupbox {
-  -moz-margin-start: 8px;
-  -moz-margin-end: 8px;
-}
-
 /**
- * End sub-dialog
+ * End Dialog
  */
