--- a/browser/themes/osx/preferences/in-content/preferences.css
+++ b/browser/themes/osx/preferences/in-content/preferences.css
@@ -2,7 +2,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this file,
    - You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-%include ../../../shared/incontentprefs/preferences.css
+%include ../../../shared/incontentprefs/preferences.inc.css
 
 prefpane .groupbox-title {
   background: none;
@@ -50,14 +50,32 @@ filefield + button {
   -moz-margin-start: -8px;
 }
 
-#dialogTitle {
-  -moz-margin-start: 6px !important;
-}
-
 #popupPolicyRow {
   /* Override styles from
      browser/themes/osx/preferences/preferences.css */
   margin-bottom: 0 !important;
   padding-bottom: 0 !important;
   border-bottom: none;
+}
+
+/**
+ * Dialog
+ */
+
+#dialogBox {
+  padding: 15px 20px 20px;
+}
+
+#dialogTitle {
+  font-size: 1.1em;
+}
+
+.titlebar {
+  margin-bottom: 9px;
+  -moz-padding-start: 0;
+}
+
+.close-icon {
+  margin-top: -29px;
+  -moz-margin-end: -14px;
 }
