Bug 1260839 - Move -moz-user-select: text up to #output-wrapper so selection can be cancelled by clicking below messages. r=vporof
MozReview-Commit-ID: 6KyHSRclSMX

--- a/devtools/client/themes/webconsole.css
+++ b/devtools/client/themes/webconsole.css
@@ -128,13 +128,11 @@ a {
 #output-wrapper {
   direction: ltr;
   overflow: auto;
-}
-
-#output-container {
-  /* This width is set to a hardcoded px in webconsole.js since it's way
-     faster than using 100% with -moz-box-flex (see Bug 1237368) */
   -moz-user-select: text;
 }
+
+/* The width on #output-container is set to a hardcoded px in webconsole.js
+   since it's way faster than using 100% with -moz-box-flex (see Bug 1237368) */
 
 #output-container.hideTimestamps > .message {
   -moz-padding-start: 0;
