--- a/toolkit/components/extensions/test/mochitest/test_ext_extension.html
+++ b/toolkit/components/extensions/test/mochitest/test_ext_extension.html
@@ -48,7 +48,7 @@ add_task(function* test_is_allowed_file_scheme_access() {
 
   yield extension.startup();
   info("extension loaded");
-  yield extension.awaitFinish("isAllowedFileSchemeAccess")
+  yield extension.awaitFinish("isAllowedFileSchemeAccess");
   yield extension.unload();
   info("extension unloaded");
 });
