Bug 1292593 - Add missing border to autocomplete popups. r=gijs a=lizzard
--HG--
extra : source : c819e284a13937fc955c2efb6da7fdf9c5bb8b88

--- a/browser/themes/linux/searchbar.css
+++ b/browser/themes/linux/searchbar.css
@@ -4,7 +4,6 @@
 
 #PopupSearchAutoComplete {
   margin-inline-start: -24px;
-  padding: 1px;
 }
 
 .autocomplete-textbox-container {
@@ -113,7 +112,7 @@ menuitem[cmd="cmd_clearhistory"][disabled] {
 }
 
 .search-panel-one-offs {
-  margin: 0 -1px !important;
+  margin: 0 !important;
   border-top: 1px solid rgba(0, 0, 0, 0.2);
 }
 
