Bug 1613895 - renamed and moved NetworkDetailsPanel to NetworkDetailsBar r=Honza
Differential Revision: https://phabricator.services.mozilla.com/D65924

--- a/devtools/client/netmonitor/src/assets/styles/NetworkDetailsBar.css
+++ b/devtools/client/netmonitor/src/assets/styles/NetworkDetailsBar.css
@@ -4,7 +4,7 @@
 
 /* Network details panel */
 
-.network-monitor .network-details-panel {
+.network-monitor .network-details-bar {
   width: 100%;
   height: 100%;
   overflow: hidden;
