Bug 1609822 - make about:checkerboard an HTML file r=ntim
Differential Revision: https://phabricator.services.mozilla.com/D66148

--- a/toolkit/components/aboutcheckerboard/content/aboutCheckerboard.html
+++ b/toolkit/components/aboutcheckerboard/content/aboutCheckerboard.html
@@ -1,13 +1,12 @@
-<?xml version="1.0"?>
-
 <!-- This Source Code Form is subject to the terms of the Mozilla Public
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
-
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
  <head>
-  <meta http-equiv="Content-Security-Policy" content="default-src chrome:; object-src 'none'" />
-  <meta name="viewport" content="width=device-width"/>
+  <meta http-equiv="Content-Security-Policy" content="default-src chrome:; object-src 'none'">
+  <meta name="viewport" content="width=device-width">
+  <meta charset="utf-8">
   <title>Checkerboard Analyzer</title>
   <link rel="stylesheet" href="chrome://global/content/aboutCheckerboard.css" type="text/css"/>
  </head>
@@ -28,7 +27,7 @@
    </tr>
   </table>
 
-  <hr/>
+  <hr>
 
   <div id="player">
    <div id="controls">
@@ -43,13 +42,13 @@
    <pre id="active">(Details for currently visible replay frame)</pre>
   </div>
 
-  <hr/>
+  <hr>
 
   <div id="raw">
-   Raw log:<br/>
+   Raw log:<br>
    <textarea id="trace" rows="10"></textarea>
    <div>
-    <input type="checkbox" id="excludePageFromZoom"/><label for="excludePageFromZoom">Exclude page coordinates from zoom calculations</label><br/>
+    <input type="checkbox" id="excludePageFromZoom"/><label for="excludePageFromZoom">Exclude page coordinates from zoom calculations</label><br>
    </div>
   </div>
  </body>
