Backed out 3 changesets (bug 1621319) for Mochitest failures in Harness_sanity/test_sanityEventUtils.html
Backed out changeset 9181798549f2 (bug 1621319)
Backed out changeset 0522121ddf22 (bug 1621319)
Backed out changeset b65f1bde461a (bug 1621319)

--- a/layout/forms/test/test_bug365410.html
+++ b/layout/forms/test/test_bug365410.html
@@ -3,13 +3,12 @@
 <!--
 https://bugzilla.mozilla.org/show_bug.cgi?id=365410
 -->
-<title>Test for Bug 365410</title>
-<script src="/tests/SimpleTest/SimpleTest.js"></script>
-<script src="/tests/SimpleTest/EventUtils.js"></script>
-<link rel="stylesheet" type="text/css" href="/tests/SimpleTest/test.css"/>
-<style>
-  select { box-sizing: content-box }
-</style>
+<head>
+  <title>Test for Bug 365410</title>
+  <script src="/tests/SimpleTest/SimpleTest.js"></script>
+  <script src="/tests/SimpleTest/EventUtils.js"></script>
+  <link rel="stylesheet" type="text/css" href="/tests/SimpleTest/test.css"/>
+</head>
 <body>
 <a target="_blank" href="https://bugzilla.mozilla.org/show_bug.cgi?id=365410">Mozilla Bug 365410</a>
 <p id="display">
