Bug 1615509: Show throbber while processing. r=mtigley,ladybenko
Depends on D64535

Differential Revision: https://phabricator.services.mozilla.com/D65284

--- a/devtools/client/themes/compatibility.css
+++ b/devtools/client/themes/compatibility.css
@@ -14,6 +14,13 @@
   overflow: auto;
 }
 
+.compatibility-app__throbber {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: calc(var(--compatibility-base-unit) * 8);
+}
+
 .compatibility-issue-list {
   list-style: none;
   margin: 0;
