Bug 1440212 part 2.  Add the ability to fire the load event on a frame element async from the load event on the window inside if they are in different docgroups. r=nika
Behind a pref for now.

Differential Revision: https://phabricator.services.mozilla.com/D35600

--- a/layout/printing/crashtests/793844.html
+++ b/layout/printing/crashtests/793844.html
@@ -2,8 +2,13 @@
 <head>
 <title>crash in nsContentList::nsContentList on print preview</title>
 </head><body>
-
-<iframe  onload="window.location.reload()" src="data:text/html,">
+<script>
+  onmessage = function () {
+    window.location.reload();
+  }
+</script>
+<!-- Give our load event a chance to fire too -->
+<iframe onload="postMessage(null, '*')" src="data:text/html,">
 </iframe>
 
 
