--- a/layout/printing/crashtests/793844.html
+++ b/layout/printing/crashtests/793844.html
@@ -2,13 +2,8 @@
 <head>
 <title>crash in nsContentList::nsContentList on print preview</title>
 </head><body>
-<script>
-  onmessage = function () {
-    window.location.reload();
-  }
-</script>
-<!-- Give our load event a chance to fire too -->
-<iframe onload="postMessage(null, '*')" src="data:text/html,">
+
+<iframe  onload="window.location.reload()" src="data:text/html,">
 </iframe>
 
 
