--- a/layout/base/tests/chrome/printpreview_helper.xhtml
+++ b/layout/base/tests/chrome/printpreview_helper.xhtml
@@ -422,8 +422,19 @@ async function runTest11() {
   requestAnimationFrame(function() { setTimeout(runTest12); } );
 }
 
-// Crash test for bug 1615261
 async function runTest12() {
+  await compareFiles("test_document_adopted_styles.html", "test_adopted_styles_ref.html");
+  requestAnimationFrame(function() { setTimeout(runTest13); } );
+}
+
+async function runTest13() {
+  await compareFiles("test_shadow_root_adopted_styles.html", "test_adopted_styles_ref.html");
+  requestAnimationFrame(function() { setTimeout(runTest14); } );
+}
+
+
+// Crash test for bug 1615261
+async function runTest14() {
   frameElts[0].contentDocument.body.innerHTML =
     '<style> div { width: 100px; height: 100px; background-image: url("animated.gif"); } </style>' +
     '<div>Firefox will crash if you try and print this page</div>';
