--- a/toolkit/components/extensions/test/mochitest/test_ext_activityLog.html
+++ b/toolkit/components/extensions/test/mochitest/test_ext_activityLog.html
@@ -12,9 +12,9 @@
 <script type="text/javascript">
 "use strict";
 
+
 add_task(async function test_api() {
-  let URL =
-    "http://mochi.test:8888/tests/toolkit/components/extensions/test/mochitest/file_sample.html";
+  let URL = "http://mochi.test:8888/tests/toolkit/components/extensions/test/mochitest/file_sample.html";
 
   // Test that an unspecified extension is not logged by the watcher extension.
   let unlogged = ExtensionTestUtils.loadExtension({
@@ -40,14 +40,7 @@ add_task(async function test_api() {
   let extension = ExtensionTestUtils.loadExtension({
     manifest: {
       applications: { gecko: { id: "watched@tests.mozilla.org" } },
-      permissions: [
-        "tabs",
-        "tabHide",
-        "storage",
-        "webRequest",
-        "webRequestBlocking",
-        "<all_urls>",
-      ],
+      permissions: ["webRequest", "webRequestBlocking", "<all_urls>"],
       content_scripts: [
         {
           matches: ["http://mochi.test/*/file_sample.html"],
@@ -65,7 +58,6 @@ add_task(async function test_api() {
       },
     },
     async background() {
-      let listen = () => {};
       async function runTest() {
         // Test activity for a child function call.
         browser.test.assertEq(
@@ -75,16 +67,13 @@ add_task(async function test_api() {
         );
 
         // Test a child event manager.
-        browser.storage.onChanged.addListener(listen);
-        browser.storage.onChanged.removeListener(listen);
+        browser.test.onMessage.addListener(async msg => {});
 
         // Test a parent event manager.
-        let webRequestListener = details => {
-          browser.webRequest.onBeforeRequest.removeListener(webRequestListener);
-          return { cancel: false };
-        };
         browser.webRequest.onBeforeRequest.addListener(
-          webRequestListener,
+          details => {
+            return { cancel: false };
+          },
           { urls: ["http://mochi.test/*/file_sample.html"] },
           ["blocking"]
         );
@@ -98,16 +87,13 @@ add_task(async function test_api() {
         });
         browser.test.sendMessage("ready");
       }
-      browser.test.onMessage.addListener((msg, data) => {
+      browser.test.onMessage.addListener(msg => {
         // Logging has started here so this listener is logged, but the
         // call adding it was not.  We do an additional onMessage.addListener
         // call in the test function to validate child based event managers.
         if (msg == "runtest") {
           browser.test.assertTrue(true, msg);
           runTest();
-        }
-        if (msg == "hideTab") {
-          browser.tabs.hide(data);
         }
       });
       browser.test.sendMessage("url", browser.extension.getURL(""));
@@ -134,14 +120,7 @@ add_task(async function test_api() {
       // Test child addListener calls.
       {
         type: "api_call",
-        name: "storage.onChanged.addListener",
-        data: {
-          args: [],
-        },
-      },
-      {
-        type: "api_call",
-        name: "storage.onChanged.removeListener",
+        name: "test.onMessage.addListener",
         data: {
           args: [],
         },
@@ -198,24 +177,7 @@ add_task(async function test_api() {
         name: "test.sendMessage",
         data: { args: ["ready"] },
       },
-      {
-        type: "api_call",
-        name: "tabs.hide",
-        data: { args: [1] },
-      },
-      {
-        type: "api_event",
-        name: "test.onMessage",
-        data: { args: ["hideTab", 1] },
-      },
       // Test parent api_event calls.
-      {
-        type: "api_call",
-        name: "webRequest.onBeforeRequest.removeListener",
-        data: {
-          args: [],
-        },
-      },
       {
         type: "api_event",
         name: "webRequest.onBeforeRequest",
@@ -267,7 +229,7 @@ add_task(async function test_api() {
     browser.test.assertTrue(browser.activityLog, "activityLog is privileged");
 
     let tab;
-    let handler = async details => {
+    browser.activityLog.onExtensionActivity.addListener(async details => {
       browser.test.log(`onExtensionActivity ${JSON.stringify(details)}`);
       let test = expecting.shift();
       if (!test) {
@@ -310,22 +272,11 @@ add_task(async function test_api() {
         await browser.tabs.remove(tab.id);
         browser.test.notifyPass("activity");
       }
-    };
-    browser.activityLog.onExtensionActivity.addListener(
-      handler,
-      "watched@tests.mozilla.org"
-    );
+    }, "watched@tests.mozilla.org");
 
     browser.test.onMessage.addListener(async msg => {
       if (msg === "opentab") {
-        tab = await browser.tabs.create({ url: expectedUrl });
-        browser.test.sendMessage("tabid", tab.id);
-      }
-      if (msg === "done") {
-        browser.activityLog.onExtensionActivity.removeListener(
-          handler,
-          "watched@tests.mozilla.org"
-        );
+        tab = await browser.tabs.create({url: expectedUrl});
       }
     });
   }
@@ -345,8 +296,6 @@ add_task(async function test_api() {
   extension.sendMessage("runtest");
   await extension.awaitMessage("ready");
   logger.sendMessage("opentab");
-  let id = await logger.awaitMessage("tabid");
-  extension.sendMessage("hideTab", id);
 
   await Promise.all([
     extension.awaitMessage("content_script"),
@@ -354,14 +303,12 @@ add_task(async function test_api() {
     logger.awaitFinish("activity"),
   ]);
 
-  // Stop watching because we get extra calls on extension shutdown
-  // such as listener removal.
-  logger.sendMessage("done");
-
   await extension.unload();
   await unlogged.unload();
   await logger.unload();
 });
+
+
 </script>
 
 </body>
