Bug 1623108 - Use ThreeDFace instead of ThreeDLightShadow for fieldset borders. r=mats
As per https://html.spec.whatwg.org/#the-fieldset-and-legend-elements

Differential Revision: https://phabricator.services.mozilla.com/D67168

--- a/layout/style/res/forms.css
+++ b/layout/style/res/forms.css
@@ -73,7 +73,7 @@ fieldset {
   padding-block-end: 0.625em;
   padding-inline-start: 0.75em;
   padding-inline-end: 0.75em;
-  border: 2px groove ThreeDLightShadow;
+  border: 2px groove ThreeDFace;
   min-inline-size: min-content;
 }
 
