Bug 1684526 - Cursor default for all of Customize Menu. r=prathiksha, a=pascalc
Differential Revision: https://phabricator.services.mozilla.com/D102962

--- a/browser/components/newtab/content-src/components/CustomizeMenu/_CustomizeMenu.scss
+++ b/browser/components/newtab/content-src/components/CustomizeMenu/_CustomizeMenu.scss
@@ -13,6 +13,7 @@
   overflow: auto;
   transform: translateX(435px);
   visibility: hidden;
+  cursor: default;
 
   &:dir(rtl) {
     transform: translateX(-435px);
