Bug 1734264 - Upgrade spotlight visual adjustments from design feedback. r=pdahiya, a=RyanVM
Fix background sizing of horizontal color circles with updated hover styles and improved spacing among/around. Position primary button with invisible secondary button. Update noodle svg to avoid aliasing. Adjust variant disc and color circles gradient colors and direction (vertical) now always with black variant text and increased button font size. Also adjust about:welcome thank you confetti and fancy header. Update a couple backgrounds and positioning.

Test Plan:
Services.prefs.setStringPref("browser.startup.homepage", "about:blank");
Cc["@mozilla.org/browser/browserglue;1"].getService().wrappedJSObject._showUpgradeDialog()

Differential Revision: https://phabricator.services.mozilla.com/D127601

--- a/browser/components/newtab/content-src/aboutwelcome/aboutwelcome.scss
+++ b/browser/components/newtab/content-src/aboutwelcome/aboutwelcome.scss
@@ -669,8 +669,8 @@ body {
     display: block;
     margin: auto;
     background-image: url('chrome://activity-stream/content/data/content/assets/confetti.svg');
-    background-position: center;
-    background-size: cover;
+    background-position: top;
+    background-size: 100%;
     background-repeat: no-repeat;
     height: 438px;
     width: 504px;
@@ -1004,14 +1004,7 @@ body {
       padding-bottom: 16px;
       position: relative;
       text-align: center;
-      background: linear-gradient(70deg,
-        rgba(220, 171, 32, 0) 5%,
-        #2A613A 22%,
-        #D198A1 41%,
-        #844D9E 59%,
-        #E27B50 78%,
-        rgba(220, 171, 32, 0) 95%
-      ), linear-gradient(rgba(220, 171, 32, 100), rgba(220, 171, 32, 100));
+      background-image: linear-gradient(90deg, #6173FF, #ED1D5F, #F6901E, #6173FF);
       background-size: 400% auto;
       color: #000;
       background-clip: text;
