--- a/browser/components/newtab/aboutwelcome/content/aboutwelcome.css
+++ b/browser/components/newtab/aboutwelcome/content/aboutwelcome.css
@@ -564,8 +564,8 @@ body[lwt-newtab-brighttext] {
   display: block;
   margin: auto;
   background-image: url("chrome://activity-stream/content/data/content/assets/confetti.svg");
-  background-position: center;
-  background-size: cover;
+  background-position: top;
+  background-size: 100%;
   background-repeat: no-repeat;
   height: 438px;
   width: 504px;
@@ -859,7 +859,7 @@ body[lwt-newtab-brighttext] {
   padding-bottom: 16px;
   position: relative;
   text-align: center;
-  background: linear-gradient(70deg, rgba(220, 171, 32, 0) 5%, #2A613A 22%, #D198A1 41%, #844D9E 59%, #E27B50 78%, rgba(220, 171, 32, 0) 95%), linear-gradient(#dcab20, #dcab20);
+  background-image: linear-gradient(90deg, #6173FF, #ED1D5F, #F6901E, #6173FF);
   background-size: 400% auto;
   color: #000;
   background-clip: text;
